Set panel width to prevent jumping while rendering
Instead of setting max-width.

Refs pombase/website#2110

--- a/src/styles.css
+++ b/src/styles.css
@@ -491,7 +491,7 @@ select option:disabled {
 .info-panel {
   box-shadow: 0px 0px 18px rgba(120,120,120,.80);
   vertical-align: top;
-  max-width: 300px;
+  width: 300px;
 }
 
 .panel-container {
